# services-celery

./: .pre-commit-config.yaml  README.rst  entry-points.txt  pyproject.toml  setup.cfg  setup.py
nagare/admin/: celery.py
nagare/services/: celery.py
src/nagare/admin/: celery.py
src/nagare/services/: celery.py
