# =-
# (C)opyright Net-ng 2008-2024
#
# This is Net-ng proprietary source code
# Any reproduction modification or use without prior written
# approval from Net-ng is strictly forbidden.
# =-

[build-system]
requires = ['setuptools', 'wheel', 'setuptools_scm']
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]

[project]
name = 'nagare-services-celery'
dynamic = ['version', 'entry-points']
description = 'Celery service'
authors = [
    {name = 'Net-ng'},
    {email = 'contact@net-ng.com'}
]
license = {file = 'LICENSE.txt'}
requires-python = '>=3.7'
dependencies = [
    'appdirs',
    'colorama',
    'celery>5.3.0',
    'nagare-config',
    'nagare-services',
    'nagare-commands',
    'nagare-server'
]

[project.readme]
file = 'README.rst'
content-type = 'text/x-rst'

[tool.setuptools.dynamic]
entry-points = {file = 'entry-points.txt'}

[project.optional-dependencies]
arangodb = ['celery[arangodb]']
auth = ['celery[auth]']
azureblockblob = ['celery[azureblockblob]']
brotli = ['celery[brotli]']
cassandra = ['celery[cassandra]']
consul = ['celery[consul]']
cosmosdbsql = ['celery[cosmosdbsql]']
couchbase = ['celery[couchbase]']
couchdb = ['celery[couchdb]']
django = ['celery[django]']
dynamodb = ['celery[dynamodb]']
elasticsearch = ['celery[elasticsearch]']
eventlet = ['celery[eventlet]']
gevent = ['celery[gevent]']
librabbitmq = ['celery[librabbitmq]']
memcache = ['celery[memcache]']
mongodb = ['celery[mongodb]']
msgpack = ['celery[msgpack]']
pymemcache = ['celery[pymemcache]']
pyro = ['celery[pyro]']
pytest = ['celery[pytest]']
redis = ['celery[redis]']
s3 = ['celery[s3]']
slmq = ['celery[slmq]']
solar = ['celery[solar]']
sqlalchemy = ['celery[sqlalchemy]']
sqs = ['celery[sqs]']
tblib = ['celery[tblib]']
yaml = ['celery[yaml]']
zookeeper = ['celery[zookeeper]']
zstd = ['celery[zstd]']

dev = [
    'sphinx',
    'sphinx_rtd_theme',
    'pre-commit',
    'ruff',
    'pytest',
    'twine'
]

[project.urls]
Homepage = 'https://nagare.org'
Documentation = 'https://nagare.org/doc'
Source = 'https://github.com/nagareproject/services-celery'
Tracker = 'https://github.com/nagareproject/services-celery/issues'

[tool.ruff]
select = ['C4', 'COM', 'D', 'E', 'ERA', 'F', 'I', 'ISC', 'INP', 'PIE', 'Q', 'S', 'SIM', 'TID', 'W', 'YTT']
ignore = ['COM812', 'D10', 'D401', 'S307', 'ISC001']
line-length = 120
src = ['src']

[tool.ruff.per-file-ignores]
'src/nagare/services/celery.py' = ['E402']

[tool.ruff.flake8-quotes]
inline-quotes = 'single'

[tool.ruff.pydocstyle]
convention = 'google'

[tool.ruff.isort]
length-sort = true

[tool.ruff.format]
quote-style = 'single'

[tool.pytest.ini_options]
testpaths = ['tests']
